manifests/apps/manifests/matoru.ru/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: matoru-ru
  labels:
    istio.io/dataplane-mode: ambient
    shared-gateway-access: 'true'
