manifests/apps/manifests/matoru.ru/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: matoru.ru
spec:
  selector:
    matchLabels:
      run: web
  template:
    metadata:
      labels:
        app: matoru.ru
        run: web
    spec:
      containers:
      - image: matoruru/matoru.ru:latest
        imagePullPolicy: Always
        name: web
        ports:
        - containerPort: 3000
          protocol: TCP
