manifests/apps/manifests/matoru.ru/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    app: matoru.ru
  type: ClusterIP
