manifests/apps/manifests/matoru.ru/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mesh
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: gateway-istio
  rules:
  - backendRefs:
    - name: web
      port: 8080
